--- a/browser/package.json
+++ b/browser/package.json
@@ -16,7 +16,7 @@
     "browserify": "16.5.1",
     "browserify-css": "0.15.0",
     "canvas": "^2.6.1",
-    "d3": "6.7.0",
+    "d3": "^7.9.0",
     "eslint": "7.0.0",
     "eslint-config-prettier": "^9.1.0",
     "fzstd": "0.1.0",
@@ -27,16 +27,20 @@
     "jquery-ui": "1.13.2",
     "jscpd": "3.5.10",
     "l10n-for-node": "0.0.1",
-    "mocha": "8.2.1",
+    "mocha": "^10.4.0",
     "prettier": "^3.1.1",
     "select2": "4.0.13",
-    "shrinkpack": "1.0.0-alpha",
+    "shrinkpack": "^0.20.0",
     "smartmenus": "1.0.0",
-    "stylelint": "13.7.0",
+    "stylelint": "^16.5.0",
+    "terser": "^5.31.0",
     "typescript": "4.4.2",
     "uglify-js": "3.17.4",
     "uglifycss": "0.0.29",
-    "uglifyify": "5.0.2"
+    "uglifyify": "^5.0.0"
+  },
+  "overrides": {
+    "terser": "^5.31.0"
   },
   "repository": {
     "type": "git",
